k8s/postgres/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-db-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
      name: postgres-db
    spec:
      volumes:
          - name: postgres-storage
            persistentVolumeClaim:
              claimName: postgres-pvc
      containers:        
        - name: postgres-db-pod
          image: postgres:14-alpine
          ports:
            - name: "postgres"
              containerPort: 5432
          resources:
            requests:
              memory: "800Mi"
              cpu: "1"
            limits:
              cpu: "2"
              memory: "1Gi"
          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data
