k8s/postgres/tyd-user-module-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyd-user-module-ing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api.tyd-um.com
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/user/
            backend:
              service:
                name: tyd-user-module-svc
                port:
                  number: 80
